sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnknownAD/testclient.prog
simstep 48 1
getvariable 0xa1 0x10 xxx
simstep 49 1
